[gd_scene load_steps=2 format=3 uid="uid://4k5megwckldt"]

[ext_resource type="Script" path="res://gui/MainMenu.gd" id="1_akcjy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akcjy")

[node name="LabelAddress" type="Label" parent="."]
layout_mode = 0
offset_left = 514.0
offset_top = 52.0
offset_right = 634.0
offset_bottom = 75.0
text = "Adres serwera:"

[node name="Address" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 98.0
offset_right = 779.0
offset_bottom = 129.0
text = "127.0.0.1"

[node name="LabelPortNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 141.0
offset_right = 627.0
offset_bottom = 164.0
text = "Numer portu:"

[node name="PortNumber" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 183.0
offset_right = 646.0
offset_bottom = 214.0
text = "25369"

[node name="ButtonConnect" type="Button" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 242.0
offset_right = 655.0
offset_bottom = 279.0
text = "Połącz"

[node name="LabelUsername" type="Label" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 308.0
offset_right = 666.0
offset_bottom = 331.0
text = "Nazwa użytkownika:"

[node name="Username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 346.0
offset_right = 772.0
offset_bottom = 377.0
text = "Bilbo Baggins"
placeholder_text = "login"

[node name="LabelPassword" type="Label" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 400.0
offset_right = 660.0
offset_bottom = 423.0
text = "Hasło:"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 450.0
offset_right = 768.0
offset_bottom = 481.0
placeholder_text = "password"
clear_button_enabled = true
selecting_enabled = false
secret = true

[node name="ButtonLogin" type="Button" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 521.0
offset_right = 652.0
offset_bottom = 558.0
text = "Zaloguj"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 451.0
offset_right = 233.0
offset_bottom = 488.0
text = "Wyjdź z gry"

[node name="Disconnect" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 519.0
offset_right = 235.0
offset_bottom = 556.0
text = "Rozłącz"

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 89.0
offset_right = 240.0
offset_bottom = 126.0
text = "Ustawienia"

[node name="Help" type="Button" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 157.0
offset_right = 239.0
offset_bottom = 194.0
text = "Pomoc"

[connection signal="pressed" from="ButtonConnect" to="." method="_on_connect_to_server_pressed"]
[connection signal="pressed" from="ButtonLogin" to="." method="_OnLoginPressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
